k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: default
  labels:
    app: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306 #mysql port
  type: ClusterIP
