k8s/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default
  labels:
    app: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 #app port
  type: ClusterIP
