k8s/myprogram-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.rule: Host(`89.168.60.113.nip.io`) && PathPrefix(`/petclinic`)
spec:
  rules:
  - host: 89.168.60.113.nip.io
    http:
      paths:
      - path: /petclinic
        pathType: Prefix
        backend:
          service:
            name: petclinic-service
            port:
              number: 80
